--- a/0.9.9/Dockerfile
+++ b/0.9.9/Dockerfile
@@ -1,11 +1,102 @@
-FROM openresty/openresty:1.11.2.2-alpine
+# Dockerfile - alpine
+# https://github.com/openresty/docker-openresty
+
+FROM alpine:latest
+
+MAINTAINER Evan Wies <evan@neomantra.net>
+
+# Docker Build Arguments
+ARG RESTY_VERSION="1.11.2.2"
+ARG RESTY_OPENSSL_VERSION="1.0.2j"
+ARG RESTY_PCRE_VERSION="8.39"
+ARG RESTY_J="1"
+ARG RESTY_CONFIG_OPTIONS="\
+    --with-file-aio \
+    --with-http_addition_module \
+    --with-http_auth_request_module \
+    --with-http_dav_module \
+    --with-http_flv_module \
+    --with-http_geoip_module=dynamic \
+    --with-http_gunzip_module \
+    --with-http_gzip_static_module \
+    --with-http_image_filter_module=dynamic \
+    --with-http_mp4_module \
+    --with-http_random_index_module \
+    --with-http_realip_module \
+    --with-http_secure_link_module \
+    --with-http_slice_module \
+    --with-http_ssl_module \
+    --with-http_stub_status_module \
+    --with-http_sub_module \
+    --with-http_v2_module \
+    --with-http_xslt_module=dynamic \
+    --with-ipv6 \
+    --with-mail \
+    --with-mail_ssl_module \
+    --with-md5-asm \
+    --with-pcre-jit \
+    --with-sha1-asm \
+    --with-stream \
+    --with-stream_ssl_module \
+    --with-threads \
+    "
+
+# These are not intended to be user-specified
+ARG _RESTY_CONFIG_DEPS="--with-openssl=/tmp/openssl-${RESTY_OPENSSL_VERSION} --with-pcre=/tmp/pcre-${RESTY_PCRE_VERSION}"
+
+# Add additional binaries into PATH for convenience
+ENV PATH=$PATH:/usr/local/openresty/luajit/bin/:/usr/local/openresty/nginx/sbin/:/usr/local/openresty/bin/
 
 ENV LUAROCKS_VERSION=2.4.1 \
  KONG_VERSION=0.10.0 \
  SERF_VERSION=0.8.1 \
  OPENRESTY_PREFIX=/usr/local/openresty
 
-RUN echo "==> Installing dependencies..." \
+# 1) Install apk dependencies
+# 2) Download and untar OpenSSL, PCRE, and OpenResty
+# 3) Build OpenResty
+# 4) Cleanup
+
+RUN \
+    apk add --no-cache --virtual .build-deps \
+        build-base \
+        curl \
+        gd-dev \
+        geoip-dev \
+        libxslt-dev \
+        linux-headers \
+        make \
+        perl-dev \
+        readline-dev \
+        zlib-dev \
+    && apk add --no-cache \
+        gd \
+        geoip \
+        libgcc \
+        libxslt \
+        zlib \
+    && cd /tmp \
+    && curl -fSL https://www.openssl.org/source/openssl-${RESTY_OPENSSL_VERSION}.tar.gz -o openssl-${RESTY_OPENSSL_VERSION}.tar.gz \
+    && tar xzf openssl-${RESTY_OPENSSL_VERSION}.tar.gz \
+    && curl -fSL https://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-${RESTY_PCRE_VERSION}.tar.gz -o pcre-${RESTY_PCRE_VERSION}.tar.gz \
+    && tar xzf pcre-${RESTY_PCRE_VERSION}.tar.gz \
+    && curl -fSL https://openresty.org/download/openresty-${RESTY_VERSION}.tar.gz -o openresty-${RESTY_VERSION}.tar.gz \
+    && tar xzf openresty-${RESTY_VERSION}.tar.gz \
+    && cd /tmp/openresty-${RESTY_VERSION} \
+    && ./configure -j${RESTY_J} ${_RESTY_CONFIG_DEPS} ${RESTY_CONFIG_OPTIONS} --without-luajit-lua52 \
+    && make -j${RESTY_J} \
+    && make -j${RESTY_J} install \
+    && cd /tmp \
+    && rm -rf \
+        openssl-${RESTY_OPENSSL_VERSION} \
+        openssl-${RESTY_OPENSSL_VERSION}.tar.gz \
+        openresty-${RESTY_VERSION}.tar.gz openresty-${RESTY_VERSION} \
+        pcre-${RESTY_PCRE_VERSION}.tar.gz pcre-${RESTY_PCRE_VERSION} \
+    && apk del .build-deps \
+    && ln -sf /dev/stdout /usr/local/openresty/nginx/logs/access.log \
+    && ln -sf /dev/stderr /usr/local/openresty/nginx/logs/error.log \
+    
+ && echo "==> Installing dependencies..." \
  && apk update \
  && apk add --virtual .build-deps \
     make gcc musl-dev curl wget git unzip openssl-dev \
@@ -17,9 +108,9 @@ RUN echo "==> Installing dependencies..." \
  && curl -sSL http://keplerproject.github.io/luarocks/releases/luarocks-${LUAROCKS_VERSION}.tar.gz |tar -xz \
  && cd luarocks* \
  && ./configure \
+    --lua-suffix=jit \
     --with-lua=$OPENRESTY_PREFIX/luajit \
-    --lua-suffix=jit-2.1.0-beta2 \
-    --with-lua-include=$OPENRESTY_PREFIX/luajit/include/luajit-2.1 \
+    --with-lua-include=$OPENRESTY_PREFIX/luajit/include/luajit-2.1
  && make build && make install \
  && echo "==> Finishing..." \
  && echo "==> Installing kong dependencies..." \
